syntax = "proto3";

// Define a message for the query vector
message QueryVector {
  // You can include any fields that represent the query vector here
  repeated double values = 1;
}

// Define a message for the query request, which includes the query vector
message QueryRequest {
  // Include the query vector as a field in the request
  QueryVector query_vector = 1;
}


// TODO: the reponse depends on the operation
// Define a message for the query response
message QueryResponse {
    
}
